Fix memory issues related to preload eviction. https://bugs.webkit.org/show_bug.cgi?id=167838

Reviewed by Andreas Kling.

This avoids removing resources from m_preloads during the iteration
by creating a second HashSetList containing the remaining link preloads.

No new tests but this will fix crashes on the leak bots.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::clearPreloads):


Canonical link: https://commits.webkit.org/184876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211673 268f45cc-cd09-0410-ab3c-d52691b4dbfc